// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`exports > exports from index.ts 1`] = `
[
  "ActionButton",
  "AdminAction",
  "AdminContextKey",
  "AdminIcon",
  "AdminInstanceContextKey",
  "AdminModalKey",
  "LogLevel",
  "NotificationCategory",
  "NotificationContainer",
  "PlainElement",
  "ReturnsForm",
  "ShipmentBarcode",
  "ShipmentOptionsForm",
  "ShipmentStatus",
  "StatusIndicator",
  "SubmitButton",
  "TabNavigation",
  "generateFieldId",
  "getActionIdentifier",
  "modalCloseAction",
  "orderExportAction",
  "orderExportToShipmentsAction",
  "orderViewInBackofficeAction",
  "ordersEditAction",
  "ordersExportPrintShipmentsAction",
  "ordersFetchAction",
  "ordersPrintAction",
  "ordersUpdateAction",
  "shipmentsExportReturnAction",
  "shipmentsPrintAction",
  "shipmentsUpdateAction",
  "useActionStore",
  "useAdminConfig",
  "useAppInfo",
  "useCheckboxGroupContext",
  "useDropOffInputContext",
  "useDropdownData",
  "useElement",
  "useForm",
  "useFormatter",
  "useGlobalContext",
  "useInputWithOptionsContext",
  "useLanguage",
  "useModalContext",
  "useModalElementContext",
  "useModalStore",
  "useNotificationStore",
  "useOrderData",
  "useOrdersData",
  "useProductData",
  "useRadioGroupContext",
  "useSelectInputContext",
  "useTriStateInputContext",
  "useWeekdays",
  "webhooksDeleteAction",
  "AdminComponent",
  "AdminView",
  "BackendEndpoint",
  "Size",
  "Status",
  "Variant",
  "TriStateValue",
  "PdkAdmin",
  "createPdkAdmin",
  "useGlobalPdkAdmin",
]
`;

exports[`exports > exports from integrated.ts 1`] = `
[
  "ActionButton",
  "AdminAction",
  "AdminContextKey",
  "AdminIcon",
  "AdminInstanceContextKey",
  "AdminModalKey",
  "LogLevel",
  "NotificationCategory",
  "NotificationContainer",
  "PlainElement",
  "ReturnsForm",
  "ShipmentBarcode",
  "ShipmentOptionsForm",
  "ShipmentStatus",
  "StatusIndicator",
  "SubmitButton",
  "TabNavigation",
  "generateFieldId",
  "getActionIdentifier",
  "modalCloseAction",
  "orderExportAction",
  "orderExportToShipmentsAction",
  "orderViewInBackofficeAction",
  "ordersEditAction",
  "ordersExportPrintShipmentsAction",
  "ordersFetchAction",
  "ordersPrintAction",
  "ordersUpdateAction",
  "shipmentsExportReturnAction",
  "shipmentsPrintAction",
  "shipmentsUpdateAction",
  "useActionStore",
  "useAdminConfig",
  "useAppInfo",
  "useCheckboxGroupContext",
  "useDropOffInputContext",
  "useDropdownData",
  "useElement",
  "useForm",
  "useFormatter",
  "useGlobalContext",
  "useInputWithOptionsContext",
  "useLanguage",
  "useModalContext",
  "useModalElementContext",
  "useModalStore",
  "useNotificationStore",
  "useOrderData",
  "useOrdersData",
  "useProductData",
  "useRadioGroupContext",
  "useSelectInputContext",
  "useTriStateInputContext",
  "useWeekdays",
  "webhooksDeleteAction",
  "AdminComponent",
  "AdminView",
  "BackendEndpoint",
  "Size",
  "Status",
  "Variant",
  "TriStateValue",
  "ChildProductSettingsView",
  "ModalsView",
  "NotificationsView",
  "OrderBoxView",
  "OrderListItemView",
  "PluginSettingsView",
  "ProductSettingsView",
  "createPdkAdminPlugin",
  "useQueryStore",
  "useStoreQuery",
]
`;
